--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,1 +1,1 @@
-• Ми поліпшили оформлення повідомлень з медіафайлами в цитатах, а ще прибрали візуальну прогалину між рядком пошуку й списком чатів, яка з'являлася, якщо в налаштуваннях доступності iOS було ввімкнено зменшення прозорості.
+• It's always OK to change your mind, so we fixed a bug that caused the image picker to open after pasting an attachment into a chat and then deciding not to send it.
