--- a/fastlane/metadata/ar-SA/release_notes.txt
+++ b/fastlane/metadata/ar-SA/release_notes.txt
@@ -1,1 +1,1 @@
-• يُحسِّن هذا التحديث تخطيط رسائل الوسائط التي تتضمّن ردودًا مُقتبسة، كما يُصلِح فجوة مرئية كانت تظهر بين شريط البحث وقائمة محادثاتك عند تفعيل خيار "تخفيض الشفافية" في إعدادات تسهيلات الاستخدام على نظام iOS.
+• It's always OK to change your mind, so we fixed a bug that caused the image picker to open after pasting an attachment into a chat and then deciding not to send it.
