--- a/fastlane/metadata/ca/release_notes.txt
+++ b/fastlane/metadata/ca/release_notes.txt
@@ -1,1 +1,1 @@
-• Aquesta actualització millora el disseny dels missatges multimèdia amb respostes citades, i també corregeix un espai visual que podia aparèixer entre la barra de cerca i la teva llista de xats.
+• It's always OK to change your mind, so we fixed a bug that caused the image picker to open after pasting an attachment into a chat and then deciding not to send it.
