--- a/fastlane/metadata/cs/release_notes.txt
+++ b/fastlane/metadata/cs/release_notes.txt
@@ -1,1 +1,1 @@
-• Tato aktualizace zlepšuje rozložení multimediálních zpráv s citovanými odpověďmi a také opravuje vizuální mezeru, která se mohla objevit mezi vyhledávacím panelem a seznamem chatů.
+• It's always OK to change your mind, so we fixed a bug that caused the image picker to open after pasting an attachment into a chat and then deciding not to send it.
