--- a/fastlane/metadata/da/release_notes.txt
+++ b/fastlane/metadata/da/release_notes.txt
@@ -1,1 +1,1 @@
-• Denne opdatering forbedrer layoutet af mediebeskeder med citerede svar og retter også et visuelt mellemrum, der opstod mellem søgefeltet og din chatliste, da iOS-tilgængelighedsindstillingen "Reducer gennemsighed" blev aktiveret.
+• It's always OK to change your mind, so we fixed a bug that caused the image picker to open after pasting an attachment into a chat and then deciding not to send it.
