--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,1 +1,1 @@
-• Dieses Update verbessert das Layout von Medien-Mitteilungen mithilfe von zitierten Antworten. Außerdem wurde ein optischer Abstand zwischen der Suchleiste und deiner Chatliste entfernt, der erschien, wenn die Einstellung »Transparenz reduzieren« in den iOS-Bedienungshilfen aktiviert war.
+• It's always OK to change your mind, so we fixed a bug that caused the image picker to open after pasting an attachment into a chat and then deciding not to send it.
