--- a/fastlane/metadata/hu/release_notes.txt
+++ b/fastlane/metadata/hu/release_notes.txt
@@ -1,1 +1,1 @@
-• Ez a frissítés javítja az idézett válaszokat tartalmazó médiaüzenetek elrendezését, és kijavítja a keresősáv és a csevegőlista között előforduló vizuális rést.
+• It's always OK to change your mind, so we fixed a bug that caused the image picker to open after pasting an attachment into a chat and then deciding not to send it.
