--- a/fastlane/metadata/it/release_notes.txt
+++ b/fastlane/metadata/it/release_notes.txt
@@ -1,1 +1,1 @@
-• Questo aggiornamento migliora il layout dei messaggi con media contenenti risposte citate. Inoltre, risolve un problema grafico che causava la comparsa di uno spazio tra la barra di ricerca e il tuo elenco chat quando attivavi l'opzione di accessibilità "Riduci trasparenza" di iOS.
+• It's always OK to change your mind, so we fixed a bug that caused the image picker to open after pasting an attachment into a chat and then deciding not to send it.
