--- a/fastlane/metadata/ko/release_notes.txt
+++ b/fastlane/metadata/ko/release_notes.txt
@@ -1,1 +1,1 @@
-• 이 업데이트는 인용된 회신이 있는 미디어 메시지의 레이아웃을 개선하며, 검색창과 대화 목록 사이에 나타날 수 있는 시각적 간격도 수정합니다.
+• It's always OK to change your mind, so we fixed a bug that caused the image picker to open after pasting an attachment into a chat and then deciding not to send it.
