--- a/fastlane/metadata/ms/release_notes.txt
+++ b/fastlane/metadata/ms/release_notes.txt
@@ -1,1 +1,1 @@
-• Kemas kini ini menambah baik reka letak mesej media dengan balasan yang dipetik dan membetulkan jurang visual yang muncul antara bar carian dan senarai sembang anda.
+• It's always OK to change your mind, so we fixed a bug that caused the image picker to open after pasting an attachment into a chat and then deciding not to send it.
