--- a/fastlane/metadata/no/release_notes.txt
+++ b/fastlane/metadata/no/release_notes.txt
@@ -1,1 +1,1 @@
-• Denne oppdateringen sikrer bedre layout for meldinger med mediefiler og siterte svar, og den fjerner det ekstra tomrommet mellom søkefeltet og samtalelisten inne på Signal.
+• It's always OK to change your mind, so we fixed a bug that caused the image picker to open after pasting an attachment into a chat and then deciding not to send it.
