--- a/fastlane/metadata/pl/release_notes.txt
+++ b/fastlane/metadata/pl/release_notes.txt
@@ -1,1 +1,1 @@
-• W ramach tej aktualizacji poprawiliśmy układ wiadomości multimedialnych z cytatem w odpowiedzi. Usunęliśmy też przerwę, która pojawiała się między paskiem wyszukiwania a listą czatów przy włączonej opcji „Zmniejsz przezroczystość” w ustawieniach dostępności systemu iOS.
+• It's always OK to change your mind, so we fixed a bug that caused the image picker to open after pasting an attachment into a chat and then deciding not to send it.
