--- a/fastlane/metadata/ro/release_notes.txt
+++ b/fastlane/metadata/ro/release_notes.txt
@@ -1,1 +1,1 @@
-• Această actualizare îmbunătățește aspectul mesajelor media cu răspunsuri citate și remediază un gol vizual care apărea între bara de căutare și lista de chat, atunci când era activată setarea de accesibilitate iOS „Reduce transparența”.
+• It's always OK to change your mind, so we fixed a bug that caused the image picker to open after pasting an attachment into a chat and then deciding not to send it.
