--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,1 @@
-• В этом обновлении улучшена компоновка медиафайлов, приложенных к ответам с цитатами, а также исправлен визуальный разрыв, который возникал между строкой поиска и списком чатов при включённой настройке специальных возможностей iOS «Уменьшить прозрачность».
+• It's always OK to change your mind, so we fixed a bug that caused the image picker to open after pasting an attachment into a chat and then deciding not to send it.
