--- a/fastlane/metadata/sv/release_notes.txt
+++ b/fastlane/metadata/sv/release_notes.txt
@@ -1,1 +1,1 @@
-• Den här uppdateringen förbättrar layouten för mediemeddelanden med citerade svar och åtgärdar även ett visuellt mellanrum som kunde uppstå mellan sökfältet och din chattlista.
+• It's always OK to change your mind, so we fixed a bug that caused the image picker to open after pasting an attachment into a chat and then deciding not to send it.
