--- a/fastlane/metadata/tr/release_notes.txt
+++ b/fastlane/metadata/tr/release_notes.txt
@@ -1,1 +1,1 @@
-• Bu güncelleme, alıntılanan yanıtlar içeren içerik iletilerinin düzenini iyileştirir ve iOS Erişilebilirlik Ayarları'nda "Şeffaflığı Azalt" etkinken, arama çubuğuyla sohbet listen arasında oluşan görsel boşluğu da giderir.
+• It's always OK to change your mind, so we fixed a bug that caused the image picker to open after pasting an attachment into a chat and then deciding not to send it.
