--- a/fastlane/metadata/zh-Hant/release_notes.txt
+++ b/fastlane/metadata/zh-Hant/release_notes.txt
@@ -1,1 +1,1 @@
-• 此更新改善了包含引用回覆的媒體訊息版面，還修正了在啟用 iOS 輔助使用設定的「減少透明度」時，搜尋欄與聊天清單之間出現的視覺差距。
+• It's always OK to change your mind, so we fixed a bug that caused the image picker to open after pasting an attachment into a chat and then deciding not to send it.
